# zero-scribe

./: README.md  hello.py  pyproject.toml  requirements.txt
src/zero_scribe/: __init__.py  consts.py  ml_models.py  models.py  zero_scribe.py
