[project]
name = "zero-scribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchaudio>=2.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.uv.sources]
    torch = [
    { index = "pytorch-cu118", marker = "platform_system != 'Darwin'"},
    ]
    torchvision = [
    { index = "pytorch-cu118", marker = "platform_system != 'Darwin'"},
    ]
    torchaudio = [
    { index = "pytorch-cu118", marker = "platform_system != 'Darwin'"},
    ]

[[tool.uv.index]]
    name = "pytorch-cu118"
    url = "https://download.pytorch.org/whl/cu118"
    explicit = true