[project]
name = "zero-scribe"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "llvmlite>=0.43.0",
    "numba>=0.60.0",
    "numpy<2.0",
    "pydantic>=2.10.1",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "whisperx",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.uv.sources]
    torch = [
    { index = "pytorch-cu118", marker = "platform_system != 'Darwin'"},
    ]
    torchvision = [
    { index = "pytorch-cu118", marker = "platform_system != 'Darwin'"},
    ]
    torchaudio = [
    { index = "pytorch-cu118", marker = "platform_system != 'Darwin'"},
    ]
whisperx = { git = "https://github.com/m-bain/whisperx.git" }

[[tool.uv.index]]
    name = "pytorch-cu118"
    url = "https://download.pytorch.org/whl/cu118"
    explicit = true
